--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "starter-vitepress",
+  "name": "csdiy",
   "version": "1.0.0",
-  "description": "A vitepress starter",
+  "description": "A CS learning trip",
   "main": "index.js",
   "scripts": {
     "dev": "vitepress dev docs",
