--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -23,7 +23,7 @@
   "defaultViewMode": "source",
   "livePreview": true,
   "showInlineTitle": false,
-  "foldHeading": false,
+  "foldHeading": true,
   "spellcheckLanguages": [
     "en-US"
   ]
