--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "vue": "^3.2.45"
   },
   "devDependencies": {
+    "katex": "^0.16.3",
     "markdown-it-imsize": "^2.0.1",
     "markdown-it-smartarrows": "^1.0.1",
     "markdown-it-task-list-plus": "^2.1.3",
