--- a/package.json
+++ b/package.json
@@ -7,13 +7,14 @@
     "serve": "vitepress serve docs"
   },
   "devDependencies": {
-    "vue": "^3.2.45",
-    "vitepress": "1.0.0-alpha.29",
     "@giscus/vue": "^2.2.3",
     "katex": "^0.16.3",
     "markdown-it-imsize": "^2.0.1",
     "markdown-it-smartarrows": "^1.0.1",
     "markdown-it-task-list-plus": "^2.1.3",
-    "markdown-it-texmath": "^1.0.0"
+    "markdown-it-texmath": "^1.0.0",
+    "medium-zoom": "^1.0.8",
+    "vitepress": "1.0.0-alpha.29",
+    "vue": "^3.2.45"
   }
 }
