--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@giscus/vue": "^2.2.3",
     "katex": "^0.16.3",
     "markdown-it-imsize": "^2.0.1",
+    "markdown-it-mark": "^3.0.1",
     "markdown-it-smartarrows": "^1.0.1",
     "markdown-it-task-list-plus": "^2.1.3",
     "markdown-it-texmath": "^1.0.0",
